--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/LittoCats/react-native-browser/issues"
   },
-  "homepage": "https://github.com/LittoCats/react-native-browser#readme"
+  "homepage": "https://github.com/LittoCats/react-native-browser#readme",
+  "devDependencies": {
+    "babel-core": "^6.24.0",
+    "commander": "latest",
+  }
 }
